force-app/main/default/objects/Contact/fields/Pronoun_other__c.field-meta.xml
<CustomField>
    <fullName>Pronoun_other__c</fullName>
    <description>Used to specify a contact&apos;s pronouns if the Pronoun picklist is set to &apos;Other/Ask me&apos;</description>
    <inlineHelpText>Used to specify a contact&apos;s pronouns if the Pronoun picklist is set to &apos;Other/Ask me&apos;</inlineHelpText>
    <label>Pronoun (other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>