force-app/main/default/objects/Contact/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>she/her/hers</fullName>
            </value>
            <value>
                <fullName>he/him/his</fullName>
            </value>
            <value>
                <fullName>they/them/theirs</fullName>
            </value>
            <value>
                <fullName>other/ask me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>