force-app/main/default/objects/Contact/fields/TDD_TTY_Required__c.field-meta.xml
<CustomField>
    <fullName>TDD_TTY_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a TeleTYpe (TTY) or Telecommunications Device for the Deaf (TDD) tool should be used for audio communications.</description>
    <inlineHelpText>Indicates that a TeleTYpe (TTY) or Telecommunications Device for the Deaf (TDD) tool should be used for audio communications.</inlineHelpText>
    <label>TDD/TTY Required</label>
    <type>Checkbox</type>
</CustomField>